syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "CleanArchitecture.Services.Catalog.API.Grpc";

package ProductApi;

service Product {
  rpc GetProducts (google.protobuf.Empty) returns (ProductsResponse);
}

message ProductsResponse{
   repeated  ProductResponse products = 1;
}

message ProductResponse {
  string name = 1;
  double price = 2;
}
